# MyInvincibleLibrary-RAIDLibrary

./: .gitignore  CMakeLists.txt  Disk.cpp  Disk.h  Galeria.cpp  Galeria.h  Image.cpp  Image.h  Imagen.cpp  Imagen.h  InvincibleManager.cpp  InvincibleManager.h  List.cpp  List.h  MetadataDB.cpp  MetadataDB.h  Node.cpp  Node.h  RAIDController.cpp  RAIDController.h  RAIDLibrary.cpp  RAIDLibrary.h  README.md  main.cpp
DisksContainer/Disk0/: parity_alps.txt  parity_coachella.txt  parity_sea.txt
